fix: improvement of connection logs screen - Http method -> HTTP method - align 'View Details' button to the right edge - Move 'plan' on the first line of an item - Initial request status -> Initial response status - Request ended -> Request pending https://gravitee.atlassian.net/browse/APIM-3198

--- a/gravitee-apim-console-webui/src/management/api/runtime-logs-v4/runtime-logs/components/api-runtime-logs-list-row/api-runtime-logs-list-row.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/runtime-logs-v4/runtime-logs/components/api-runtime-logs-list-row/api-runtime-logs-list-row.component.scss
@@ -32,6 +32,7 @@
 .log-row {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 
   background-color: mat.get-color-from-palette(gio.$mat-basic-palette, white);
   padding: 16px 24px;
